--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <title>Homework 11</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <button type="button" data-action="start">Start</button>
-    <button type="button" data-action="stop">Stop</button>
+    <div class="buttons">
+      <button type="button" class="Btn startBtn" data-action="start">
+        Start
+      </button>
+      <button type="button" class="Btn stopBtn" data-action="stop">Stop</button>
+    </div>
     <script src="./js/color-switch.js" type="module"></script>
   </body>
 </html>
